Prevent links from shifting when avatar image appears

--- a/public/css/main.css.less
+++ b/public/css/main.css.less
@@ -14,12 +14,12 @@
 
 .header-links {
   font-size: smaller;
-  margin-top: 5px;
+  margin-top: 8px;
   .signedin img {
     border-radius: 50%;
-    left: -5px;
-    position: relative;
-    top: -3px;
+    margin-right: 5px;
+    margin-top: -10px;
+    vertical-align: -8px;
   }
 }
 
